feat: add more user api
